--- a/app/src/main/res/layout/news_comment_item.xml
+++ b/app/src/main/res/layout/news_comment_item.xml
@@ -11,6 +11,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ellipsize="end"
+        android:shadowRadius="2"
+        android:shadowColor="#20000000"
+        android:shadowDx="3"
+        android:shadowDy="3"
         android:paddingBottom="5dp"
         android:singleLine="true"
         android:textColor="#3c69ce"
