--- a/app/src/main/res/layout/list_layout.xml
+++ b/app/src/main/res/layout/list_layout.xml
@@ -7,6 +7,7 @@
         android:id="@android:id/list"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:listSelector="@android:color/transparent"
         android:divider="@null"
         android:dividerHeight="0dp"
         android:padding="5dp" />
