--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -13,6 +13,11 @@
             android:summaryOff="@string/pref_auto_page_off"
             android:summaryOn="@string/pref_auto_page_on"
             android:title="@string/pref_auto_page_title" />
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:key="@string/pref_hardware_accelerated_key"
+            android:summary="@string/pref_hardware_accelerated_summary"
+            android:title="@string/pref_hardware_accelerated_title" />
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/pref_cache_category">
         <Preference
