--- a/app/src/main/res/layout/list_layout.xml
+++ b/app/src/main/res/layout/list_layout.xml
@@ -19,6 +19,9 @@
         android:layout_gravity="center"
         app:barColor="#5588FF"
         app:rimColor="#E1E8EC"
+        app:barWidth="3dp"
+        app:rimWidth="3dp"
+        app:circleRadius="30dp"
         app:progressIndeterminate="true" />
 
     <TextView
