--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -16,11 +16,11 @@
         android:layout_height="60dp"
         android:layout_gravity="center"
         app:barColor="#5588FF"
-        app:rimColor="#E1E8EC"
         app:barWidth="3dp"
-        app:rimWidth="3dp"
         app:circleRadius="30dp"
-        app:progressIndeterminate="true" />
+        app:progressIndeterminate="true"
+        app:rimColor="#E1E8EC"
+        app:rimWidth="3dp" />
 
     <TextView
         android:id="@+id/loadFail"
@@ -38,5 +38,7 @@
         android:layout_margin="16dp"
         android:alpha="0.8"
         android:src="@drawable/ic_comment"
-        android:visibility="gone" />
+        android:visibility="gone"
+        app:fab_colorNormal="@color/color_normal"
+        app:fab_colorPressed="@color/color_passed" />
 </FrameLayout>
