--- a/app/src/main/res/layout/fragment_new_comment.xml
+++ b/app/src/main/res/layout/fragment_new_comment.xml
@@ -1,42 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <EditText
         android:id="@+id/push_content"
-        android:hint="评论内容"
-        android:gravity="top|left"
-        android:lines="5"
-        android:background="@null"
-        android:padding="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:background="@null"
+        android:gravity="top|left"
+        android:hint="评论内容"
+        android:lines="5"
+        android:padding="10dp" />
+
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="48dp"
         android:background="@android:color/black"
-        android:gravity="right"
-        android:layout_height="wrap_content">
+        android:gravity="right">
+
         <TextView
             android:id="@+id/text_count"
             android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="0 / 320"
-            android:textColor="@android:color/white"
             android:gravity="center_vertical"
             android:paddingLeft="20dp"
-            android:layout_height="match_parent" />
+            android:text="0 / 320"
+            android:textColor="@android:color/white" />
+
         <Button
             android:id="@+id/send"
             android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="?android:attr/listChoiceBackgroundIndicator"
             android:drawableLeft="@android:drawable/ic_menu_send"
             android:drawablePadding="5dp"
-            android:text="发布"
-            android:textSize="14sp"
-            android:background="?android:attr/listChoiceBackgroundIndicator"
-            android:paddingRight="15dp"
             android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:text="发布"
             android:textColor="@android:color/white"
-            android:layout_height="wrap_content" />
-        </LinearLayout>
+            android:textSize="14sp" />
+    </LinearLayout>
 
 </LinearLayout>
