--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -1,68 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/list_item_background"
-    android:orientation="vertical"
-    android:paddingBottom="5dp"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp"
-    android:paddingTop="5dp">
-
-    <TextView
-        android:id="@+id/news_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:shadowRadius="2"
-        android:shadowColor="#20000000"
-        android:shadowDx="3"
-        android:shadowDy="3"
-        android:singleLine="true"
-        android:textColor="@color/title_color"
-        android:textSize="20sp"
-        android:text="aaaaa" />
+    android:background="@drawable/list_item_background_normal"
+    android:foreground="@drawable/list_item_background1">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:paddingBottom="3dp">
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/news_time"
-            style="@style/SubText"
-            android:layout_width="wrap_content"
+        <com.ywwxhz.view.ProportionLinearLayout
+            android:id="@+id/news_image_hoder"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ellipsize="end" />
+            app:pl_proportion="0.4">
 
-        <TextView
-            android:id="@+id/news_publisher"
-            style="@style/SubText"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ellipsize="end"
-            android:paddingLeft="5dp" />
+            <ImageView
+                android:id="@+id/news_image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop" />
+        </com.ywwxhz.view.ProportionLinearLayout>
 
-        <TextView
-            android:id="@+id/news_views"
-            style="@style/SubText"
-            android:layout_width="wrap_content"
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/ic_views"
-            android:drawablePadding="5dp"
-            android:gravity="center"
-            android:minWidth="50sp" />
+            android:orientation="vertical"
+            android:paddingBottom="5dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="5dp">
+
+            <TextView
+                android:id="@+id/news_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:shadowColor="#20000000"
+                android:shadowDx="3"
+                android:shadowDy="3"
+                android:shadowRadius="2"
+                android:singleLine="true"
+                android:text="aaaaa"
+                android:textColor="@color/title_color"
+                android:textSize="20sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:paddingBottom="3dp">
+
+                <TextView
+                    android:id="@+id/news_time"
+                    style="@style/SubText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end" />
+
+                <TextView
+                    android:id="@+id/news_publisher"
+                    style="@style/SubText"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ellipsize="end"
+                    android:paddingLeft="5dp" />
+
+                <TextView
+                    android:id="@+id/news_views"
+                    style="@style/SubText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@drawable/ic_views"
+                    android:drawablePadding="5dp"
+                    android:gravity="center"
+                    android:minWidth="50sp" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/news_summary"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:autoLink="none"
+                android:ellipsize="end"
+                android:lineSpacingExtra="3dp"
+                android:maxLines="3" />
+        </LinearLayout>
+
+
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/news_summary"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:autoLink="none"
-        android:ellipsize="end"
-        android:lineSpacingExtra="3dp"
-        android:maxLines="3" />
-
-</LinearLayout>
+</FrameLayout>
