--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="statusColor">#1473af</color>
     <color name="title_color">#3c69ce</color>
+    <color name="color_normal">#1473af</color>
+    <color name="color_passed">#3A85B5</color>
 </resources>
