--- a/app/src/main/res/values/styles_basic.xml
+++ b/app/src/main/res/values/styles_basic.xml
@@ -2,10 +2,11 @@
 
 <resources>
 
-    <style name="Theme.Basic" parent="@android:style/Theme.Holo.Light.DarkActionBar">
+    <style name="Theme.Basic" parent="@android:style/Theme.DeviceDefault.Light">
         <item name="android:actionBarStyle">@style/ActionBar.Solid.Basic</item>
         <item name="android:actionModeStyle">@style/ActionBar.Solid.Basic</item>
         <item name="android:windowIsTranslucent">true</item>
+        <item name="android:textColor">#474747</item>
         <item name="android:windowAnimationStyle">@style/AnimationActivity</item>
     </style>
 
@@ -17,6 +18,10 @@
     <style name="Theme.Basic.NoAnim" parent="Theme.Basic">
         <item name="android:windowIsTranslucent">false</item>
         <item name="android:windowAnimationStyle">@android:style/Animation.Activity</item>
+    </style>
+
+    <style name="Theme.Basic.Video" parent="@android:style/Theme.DeviceDefault.Light">
+        <item name="android:windowActionBarOverlay">true</item>
     </style>
 
 
