--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -15,17 +15,19 @@
             android:title="@string/pref_auto_page_title" />
         <CheckBoxPreference
             android:defaultValue="true"
+            android:key="@string/pref_show_list_news_image_key"
+            android:title="@string/pref_show_list_news_image_title"
+            android:summary="@string/pref_show_list_news_image_summary"/>
+        <CheckBoxPreference
+            android:defaultValue="true"
             android:key="@string/pref_hardware_accelerated_key"
             android:summary="@string/pref_hardware_accelerated_summary"
             android:title="@string/pref_hardware_accelerated_title" />
-    </PreferenceCategory>
-    <PreferenceCategory android:title="@string/pref_cache_category">
-        <Preference
-            android:key="@string/pref_cache_path_key"
-            android:title="@string/pref_cache_path_title" />
-        <Preference
-            android:key="@string/pref_cache_clean_key"
-            android:title="@string/pref_cache_clean_title" />
+        <CheckBoxPreference android:defaultValue="false"
+            android:key="@string/pref_debug_key"
+            android:title="@string/pref_debug_title"
+            android:summary="@string/pref_debug_summary"/>
+
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/pref_about_title">
         <Preference
