--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -18,15 +18,20 @@
             android:key="@string/pref_show_list_news_image_key"
             android:title="@string/pref_show_list_news_image_title"
             android:summary="@string/pref_show_list_news_image_summary"/>
+        <CheckBoxPreference android:defaultValue="false"
+            android:key="@string/pref_debug_key"
+            android:title="@string/pref_debug_title"
+            android:summary="@string/pref_debug_summary"/>
         <CheckBoxPreference
             android:defaultValue="true"
             android:key="@string/pref_hardware_accelerated_key"
             android:summary="@string/pref_hardware_accelerated_summary"
             android:title="@string/pref_hardware_accelerated_title" />
-        <CheckBoxPreference android:defaultValue="false"
-            android:key="@string/pref_debug_key"
-            android:title="@string/pref_debug_title"
-            android:summary="@string/pref_debug_summary"/>
+        <Preference
+            android:key="@string/pref_clean_cache_key"
+            android:summary="@string/pref_clean_cache_summary"
+            android:title="@string/pref_clean_cache_title" />
+
 
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/pref_about_title">
