修改部分界面设计。

--- a/ActionBar-PullToRefresh/src/main/res/values/pull_refresh_strings.xml
+++ b/ActionBar-PullToRefresh/src/main/res/values/pull_refresh_strings.xml
@@ -16,6 +16,6 @@
 
 <resources>
     <string name="pull_to_refresh_pull_label">下拉刷新…</string>
-    <string name="pull_to_refresh_release_label">放开以刷新…</string>
-    <string name="pull_to_refresh_refreshing_label">正在载入…</string>
+    <string name="pull_to_refresh_release_label">可以松手啦…</string>
+    <string name="pull_to_refresh_refreshing_label">努力载入中…</string>
 </resources>
