--- a/app/src/main/res/layout/paged_foot.xml
+++ b/app/src/main/res/layout/paged_foot.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
@@ -23,10 +24,13 @@
         android:textSize="18sp"
         android:visibility="gone" />
 
-    <ProgressBar
+    <com.pnikosis.materialishprogress.ProgressWheel
         android:id="@+id/pg"
         android:layout_width="25dp"
         android:layout_height="25dp"
-        android:visibility="gone" />
+        android:visibility="gone"
+        app:barWidth="2dp"
+        app:progressIndeterminate="true"
+        app:rimWidth="2dp" />
 
 </LinearLayout>
