--- a/app/src/main/res/layout/list_layout.xml
+++ b/app/src/main/res/layout/list_layout.xml
@@ -41,6 +41,7 @@
         android:layout_gravity="bottom|right"
         android:layout_margin="16dp"
         android:alpha="0.8"
+        android:visibility="gone"
         app:fab_colorNormal="@color/color_normal"
         app:fab_colorPressed="@color/color_passed" />
 
