--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -2,13 +2,13 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory android:title="@string/pref_general_category">
         <CheckBoxPreference
-            android:defaultValue="true"
+            android:defaultValue="false"
             android:key="@string/pref_auto_reflush_key"
             android:summaryOff="@string/pref_auto_reflush_off"
             android:summaryOn="@string/pref_auto_reflush_on"
             android:title="@string/pref_auto_reflush_title" />
         <CheckBoxPreference
-            android:defaultValue="true"
+            android:defaultValue="false"
             android:key="@string/pref_auto_page_key"
             android:summaryOff="@string/pref_auto_page_off"
             android:summaryOn="@string/pref_auto_page_on"
