--- a/app/src/main/res/layout/type_head.xml
+++ b/app/src/main/res/layout/type_head.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/SubText"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?android:attr/listChoiceBackgroundIndicator"
     android:clickable="true"
-    android:padding="2dp" />
+    android:padding="3dp"
+    android:textSize="14sp" />
