--- a/app/src/main/res/layout/news_list_item1.xml
+++ b/app/src/main/res/layout/news_list_item1.xml
@@ -1,96 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/list_item_background_normal"
-    android:foreground="@drawable/list_item_background1">
+    android:orientation="vertical"
+    android:paddingBottom="5dp"
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp"
+    android:paddingTop="5dp">
+
+    <TextView
+        android:id="@+id/news_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:singleLine="true"
+        android:text="aaaaa"
+        android:textColor="@color/title_color"
+        android:textSize="20sp" />
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:orientation="vertical"
-        android:paddingBottom="3dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:paddingTop="3dp">
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:paddingBottom="1dp"
+        android:weightSum="1">
 
         <TextView
-            android:id="@+id/news_title"
-            android:layout_width="match_parent"
+            style="@style/SubText"
+            android:id="@+id/news_time"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:shadowColor="#20000000"
-            android:shadowDx="3"
-            android:shadowDy="3"
-            android:shadowRadius="2"
-            android:singleLine="true"
-            android:text="aaaaa"
-            android:textColor="@color/title_color"
-            android:textSize="20sp" />
+            android:layout_weight="1.00"
+            android:ellipsize="end" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <TextView
+            style="@style/SubText"
+            android:id="@+id/news_comments"
+            android:layout_width="50sp"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:paddingBottom="1dp">
+            android:drawableLeft="@drawable/ic_comments"
+            android:drawablePadding="2dp"
+            android:gravity="center"
+            android:paddingRight="2dp" />
 
-            <TextView
-                style="@style/SubText"
-                android:id="@+id/news_time"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ellipsize="end" />
-
-            <TextView
-                style="@style/SubText"
-                android:id="@+id/news_comments"
-                android:layout_width="50sp"
-                android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/ic_comments"
-                android:drawablePadding="2dp"
-                android:gravity="center"
-                android:paddingRight="2dp" />
-
-            <TextView
-                style="@style/SubText"
-                android:id="@+id/news_views"
-                android:layout_width="56sp"
-                android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/ic_views"
-                android:drawablePadding="2dp"
-                android:gravity="center" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <TextView
+            style="@style/SubText"
+            android:id="@+id/news_views"
+            android:layout_width="56sp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:id="@+id/news_image_hoder"
-                android:layout_width="50sp"
-                android:layout_height="50sp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginRight="5dp">
-
-                <ImageView
-                    android:id="@+id/news_image"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="centerCrop" />
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/news_summary"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:autoLink="none"
-                android:ellipsize="end"
-                android:lines="3"
-                android:lineSpacingExtra="1dp" />
-        </LinearLayout>
-
+            android:drawableLeft="@drawable/ic_views"
+            android:drawablePadding="2dp"
+            android:gravity="center" />
     </LinearLayout>
-</FrameLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="2dp"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:id="@+id/news_image_hoder"
+            android:layout_width="50sp"
+            android:layout_height="50sp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="5dp">
+
+            <ImageView
+                android:id="@+id/news_image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/news_summary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:autoLink="none"
+            android:ellipsize="end"
+            android:lines="3"
+            android:lineSpacingExtra="1dp" />
+    </LinearLayout>
+
+</LinearLayout>
