--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="title_color">#3c69ce</color>
     <color name="color_normal">#1473af</color>
     <color name="color_passed">#3A85B5</color>
+    <color name="green_1">#307351</color>
 </resources>
