--- a/app/src/main/res/layout/news_comment_item.xml
+++ b/app/src/main/res/layout/news_comment_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:background="@drawable/list_item_background"
     android:padding="8dp">
 
@@ -14,7 +14,7 @@
         android:singleLine="true"
         android:text="title"
         android:textColor="#3c69ce"
-        android:textSize="16sp"
+        android:textSize="18sp"
         android:layout_marginBottom="2dp" />
 
     <TextView
@@ -25,7 +25,7 @@
         android:lineSpacingExtra="1dp"
         android:text="ref"
         android:padding="4dp"
-        android:textSize="13sp"
+        android:textSize="14sp"
         android:layout_below="@+id/comment_name"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -39,7 +39,7 @@
         android:paddingLeft="2dp"
         android:text="comment"
         android:paddingRight="2dp"
-        android:textSize="14sp"
+        android:textSize="15sp"
         android:layout_below="@+id/comment_ref"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
