--- a/app/src/main/res/layout/news_list_item1.xml
+++ b/app/src/main/res/layout/news_list_item1.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:background="@drawable/list_item_background"
     android:orientation="vertical"
     android:paddingBottom="5dp"
@@ -18,10 +18,10 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:ellipsize="end"
-        android:singleLine="true"
+        android:maxLines="2"
         android:text="aaaaa"
         android:textColor="@color/title_color"
-        android:textSize="20sp" />
+        android:textSize="22sp" />
 
     <TextView
         style="@style/SubText"
@@ -72,8 +72,8 @@
 
         <LinearLayout
             android:id="@+id/news_image_hoder"
-            android:layout_width="50sp"
-            android:layout_height="50sp"
+            android:layout_width="53sp"
+            android:layout_height="53sp"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="5dp">
 
@@ -88,10 +88,10 @@
             android:id="@+id/news_summary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:autoLink="none"
             android:ellipsize="end"
-            android:lines="3"
-            android:lineSpacingExtra="1dp" />
+            android:lineSpacingExtra="1dp"
+            android:maxLines="3"
+            android:textSize="15sp" />
     </LinearLayout>
 
 </RelativeLayout>
