--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <style name="SubText">
-        <item name="android:textSize">13sp</item>
+        <item name="android:textSize">14sp</item>
         <item name="android:textColor">#5d5b5b</item>
         <item name="android:singleLine">true</item>
     </style>
@@ -11,4 +11,47 @@
         <item name="android:activityOpenEnterAnimation">@anim/slide_in_right</item>
         <item name="android:activityCloseExitAnimation">@anim/slide_out_left</item>
     </style>
+
+    <style name="CheckBoxBasic" parent="android:Widget.CompoundButton.CheckBox">
+        <item name="android:button">@drawable/basic_btn_check_holo_light</item>
+    </style>
+
+    <style name="pullHeadStyle">
+        <item name="ptrProgressBarColor">#11659a</item>
+        <item name="ptrSmoothProgressBarStyle">@style/smoothStyle</item>
+    </style>
+
+    <style name="smoothStyle" parent="SmoothProgressBar">
+        <item name="spb_color">#11659a</item>
+        <item name="spb_mirror_mode">true</item>
+        <item name="spb_reversed">true</item>
+    </style>
+
+    <style name="Preference" />
+
+    <style name="Preference.Category">
+        <item name="android:layout">@layout/preference_category_holo</item>
+        <item name="android:shouldDisableView">false</item>
+        <item name="android:selectable">false</item>
+    </style>
+
+    <style name="ActionBar" />
+
+    <style name="ActionBar.Widget">
+        <item name="android:listPopupWindowStyle">@android:style/Widget.Holo.Light.ListPopupWindow
+        </item>
+        <item name="android:popupMenuStyle">@android:style/Widget.Holo.Light.PopupMenu</item>
+    </style>
+
+    <style name="ActionBar.Solid.Basic" parent="@android:style/Widget.Holo.ActionBar.Solid">
+        <item name="android:titleTextStyle">
+            @android:style/TextAppearance.Holo.Widget.ActionBar.Title.Inverse
+        </item>
+        <item name="android:subtitleTextStyle">
+            @android:style/TextAppearance.Holo.Widget.ActionBar.Subtitle.Inverse
+        </item>
+        <item name="android:background">@drawable/ab_solid_basic</item>
+        <item name="android:logo">@drawable/ic_logo</item>
+    </style>
+
 </resources>
