--- a/app/src/main/res/layout/list_layout.xml
+++ b/app/src/main/res/layout/list_layout.xml
@@ -8,6 +8,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:divider="@null"
+        android:dividerHeight="2dp"
         android:listSelector="@android:color/transparent"
         android:padding="5dp"
         android:scrollbarStyle="outsideOverlay" />
