--- a/app/src/main/res/layout/news_comment_item.xml
+++ b/app/src/main/res/layout/news_comment_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.ywwxhz.hoder.NewsCommentItemHoderView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/list_item_background"
@@ -9,85 +9,94 @@
         android:id="@+id/comment_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="2dp"
         android:ellipsize="end"
         android:paddingBottom="2dp"
         android:singleLine="true"
-        android:text="title"
         android:textColor="#3c69ce"
-        android:textSize="18sp"
-        android:layout_marginBottom="2dp" />
+        android:layout_toLeftOf="@+id/comment_more"
+        android:layout_toStartOf="@+id/comment_more"
+        android:textSize="18sp" />
+    <ImageView
+        android:id="@+id/comment_more"
+        android:layout_width="24sp"
+        android:layout_height="24sp"
+        android:src="@drawable/ic_more"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/comment_reason"
+        android:layout_alignEnd="@+id/comment_reason" />
 
     <TextView
         android:id="@+id/comment_ref"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/ref_background"
-        android:lineSpacingExtra="1dp"
-        android:text="ref"
-        android:padding="4dp"
-        android:textSize="14sp"
-        android:layout_below="@+id/comment_name"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="2dp" />
+        android:layout_below="@+id/comment_name"
+        android:layout_marginBottom="2dp"
+        android:background="@drawable/ref_background"
+        android:lineSpacingExtra="1dp"
+        android:padding="4dp"
+        android:text="ref"
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/comment_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/comment_ref"
+        android:layout_marginBottom="2dp"
         android:lineSpacingExtra="1dp"
         android:paddingLeft="2dp"
-        android:text="comment"
         android:paddingRight="2dp"
-        android:textSize="15sp"
-        android:layout_below="@+id/comment_ref"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="2dp" />
+        android:text="comment"
+        android:textSize="15sp" />
 
     <TextView
         style="@style/SubText"
         android:id="@+id/comment_time"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="time"
-        android:ellipsize="end"
-        android:singleLine="true"
-        android:layout_below="@+id/comment_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_below="@+id/comment_content"
         android:layout_toLeftOf="@+id/comment_score"
-        android:layout_toStartOf="@+id/comment_score" />
+        android:layout_toStartOf="@+id/comment_score"
+        android:layout_weight="1"
+        android:ellipsize="end"
+        android:singleLine="true"
+        android:text="time" />
 
     <TextView
         style="@style/SubText"
         android:id="@+id/comment_reason"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/ic_reason"
-        android:drawablePadding="5dp"
-        android:text="99+"
-        android:gravity="center"
-        android:minWidth="40sp"
         android:layout_alignBaseline="@+id/comment_time"
         android:layout_alignBottom="@+id/comment_time"
-        android:layout_alignRight="@+id/comment_content"
         android:layout_alignEnd="@+id/comment_content"
-        android:layout_marginRight="2dp" />
+        android:layout_alignRight="@+id/comment_content"
+        android:layout_marginRight="2dp"
+        android:drawableLeft="@drawable/ic_reason"
+        android:drawablePadding="5dp"
+        android:gravity="center"
+        android:minWidth="40sp"
+        android:text="99+" />
 
     <TextView
         style="@style/SubText"
         android:id="@+id/comment_score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/ic_score"
-        android:drawablePadding="5dp"
-        android:text="99+"
-        android:gravity="center"
-        android:minWidth="40sp"
         android:layout_below="@+id/comment_content"
+        android:layout_marginRight="5dp"
         android:layout_toLeftOf="@+id/comment_reason"
         android:layout_toStartOf="@+id/comment_reason"
-        android:layout_marginRight="5dp" />
-</RelativeLayout>
+        android:drawableLeft="@drawable/ic_score"
+        android:drawablePadding="5dp"
+        android:gravity="center"
+        android:minWidth="40sp"
+        android:text="99+" />
+</com.ywwxhz.hoder.NewsCommentItemHoderView>
