--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -1,34 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.ywwxhz.hoder.NewsListItemHoderView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@drawable/list_item_background"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:background="@drawable/list_item_background">
 
-    <com.ywwxhz.view.ProportionLinearLayout
-        android:id="@+id/news_image_hoder"
+    <com.ywwxhz.view.ExtImageView
+        android:id="@+id/news_image"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        app:pl_proportion="0.4">
-
-        <ImageView
-            android:id="@+id/news_image"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:scaleType="centerCrop" />
-    </com.ywwxhz.view.ProportionLinearLayout>
+        android:scaleType="centerCrop"
+        android:visibility="gone"
+        app:ex_proportion="0.4"/>
 
 
-    <LinearLayout
+    <RelativeLayout
+        android:layout_below="@id/news_image"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="vertical"
-        android:paddingBottom="5dp"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
-        android:paddingTop="5dp">
+        android:layout_height="wrap_content"
+        android:paddingBottom="3dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:paddingTop="3dp">
 
         <TextView
             android:id="@+id/news_title"
@@ -36,53 +30,56 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxLines="2"
-            android:text="aaaaa"
             android:textColor="@color/title_color"
             android:textSize="22sp" />
 
-        <LinearLayout
-            android:layout_width="fill_parent"
+        <TextView
+            style="@style/SubText"
+            android:id="@+id/news_time"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:paddingBottom="1dp">
+            android:ellipsize="end"
+            android:layout_below="@+id/news_title"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_toLeftOf="@+id/news_comments"
+            android:layout_toStartOf="@+id/news_comments" />
 
-            <TextView
-                style="@style/SubText"
-                android:id="@+id/news_time"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ellipsize="end" />
+        <TextView
+            style="@style/SubText"
+            android:id="@+id/news_comments"
+            android:layout_width="50sp"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_comments"
+            android:drawablePadding="2dp"
+            android:gravity="center"
+            android:paddingRight="2dp"
+            android:layout_below="@+id/news_title"
+            android:layout_toLeftOf="@+id/news_views"
+            android:layout_toStartOf="@+id/news_views" />
 
-            <TextView
-                style="@style/SubText"
-                android:id="@+id/news_comments"
-                android:layout_width="50sp"
-                android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/ic_comments"
-                android:drawablePadding="2dp"
-                android:gravity="center"
-                android:paddingRight="2dp" />
-
-            <TextView
-                style="@style/SubText"
-                android:id="@+id/news_views"
-                android:layout_width="56sp"
-                android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/ic_views"
-                android:drawablePadding="2dp"
-                android:gravity="center" />
-        </LinearLayout>
+        <TextView
+            style="@style/SubText"
+            android:id="@+id/news_views"
+            android:layout_width="56sp"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_views"
+            android:drawablePadding="2dp"
+            android:gravity="center"
+            android:layout_below="@+id/news_title"
+            android:layout_alignRight="@+id/news_title"
+            android:layout_alignEnd="@+id/news_title" />
 
         <TextView
             android:id="@+id/news_summary"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_height="wrap_content"
             android:ellipsize="end"
             android:lineSpacingExtra="1dp"
             android:maxLines="3"
-            android:textSize="15sp" />
-    </LinearLayout>
+            android:textSize="15sp"
+            android:layout_below="@+id/news_time" />
+    </RelativeLayout>
 
 
-</LinearLayout>
+</com.ywwxhz.hoder.NewsListItemHoderView>
