--- a/app/src/main/res/layout/news_list_item1.xml
+++ b/app/src/main/res/layout/news_list_item1.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <com.ywwxhz.hoder.NewsListItemHoderView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/list_item_background"
@@ -65,14 +64,15 @@
         android:orientation="horizontal"
         android:paddingBottom="2dp">
 
-        <com.ywwxhz.view.ExtImageView
+        <ImageView
             android:id="@+id/news_image"
             android:layout_width="50sp"
             android:layout_height="50sp"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="3dp"
             android:scaleType="centerCrop"
-            app:ex_enable="false" />
+            android:layout_marginTop="1sp"
+            android:layout_marginBottom="1sp"/>
 
         <TextView
             android:id="@+id/news_summary"
