--- a/app/src/main/res/menu/menu_detail.xml
+++ b/app/src/main/res/menu/menu_detail.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:icon="@drawable/ic_more"
+        android:icon="@drawable/ic_more_light"
         android:showAsAction="always"
         android:title="more">
         <menu>
             <item
                 android:id="@+id/menu_share"
                 android:title="@string/menu_share" />
+            <item
+                android:id="@+id/menu_font_size_up"
+                android:title="增大字体" />
+            <item
+                android:id="@+id/menu_font_size_down"
+                android:title="减小字体" />
             <item
                 android:id="@+id/menu_view_in_browser"
                 android:title="@string/menu_view_in_browser" />
